[openstack] example deployment file for v138
Also rename "deployment manifest" to "deployment file".